chore(docker): add restart policy to backend service in compose files

--- a/docker-compose-4c8g.yml
+++ b/docker-compose-4c8g.yml
@@ -87,6 +87,7 @@ services:
       - chat2db
     networks:
       - default_network
+    restart: always
     extra_hosts:
       - "host.docker.internal:host-gateway"
   emqx:
