--- a/docker-compose-8c16g.yml
+++ b/docker-compose-8c16g.yml
@@ -92,6 +92,7 @@ services:
         condition: service_started
     networks:
       - default_network
+    restart: always
     extra_hosts:
       - "host.docker.internal:host-gateway"
   emqx:
