--- a/mount/postgresql/conf/postgresql.conf
+++ b/mount/postgresql/conf/postgresql.conf
@@ -62,7 +62,7 @@ listen_addresses = '*'
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
 #port = 5432				# (change requires restart)
-max_connections = 2000			# (change requires restart)
+max_connections = 500			# (change requires restart)
 #reserved_connections = 0		# (change requires restart)
 #superuser_reserved_connections = 3	# (change requires restart)
 #unix_socket_directories = '/var/run/postgresql' # comma-separated list of directories
@@ -425,7 +425,7 @@ min_wal_size = 80MB
 #parallel_tuple_cost = 0.1		# same scale as above
 #min_parallel_table_scan_size = 8MB
 #min_parallel_index_scan_size = 512kB
-effective_cache_size = 2GB
+effective_cache_size = 4GB
 
 #jit_above_cost = 100000		# perform JIT compilation if available
 					# and query more expensive than this;
@@ -658,7 +658,7 @@ log_timezone = UTC
 
 autovacuum = on			# Enable autovacuum subprocess?  'on'
 					# requires track_counts to also be on.
-autovacuum_max_workers = 3		# max number of autovacuum subprocesses
+autovacuum_max_workers = 4		# max number of autovacuum subprocesses
 					# (change requires restart)
 #autovacuum_naptime = 1min		# time between autovacuum runs
 #autovacuum_vacuum_threshold = 50	# min number of row updates before
@@ -680,7 +680,7 @@ autovacuum_analyze_scale_factor = 0.1	# fraction of table size before analyze
 #autovacuum_vacuum_cost_delay = 2ms	# default vacuum cost delay for
 					# autovacuum, in milliseconds;
 					# -1 means use vacuum_cost_delay
-#autovacuum_vacuum_cost_limit = -1	# default vacuum cost limit for
+autovacuum_vacuum_cost_limit = 1000	# default vacuum cost limit for
 					# autovacuum, -1 means use
 					# vacuum_cost_limit
 
