--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ ENTRANCE_PORT=8088
 LANGUAGE=en-US
 
 # Description of the supOS version
-OS_VERSION=V1.1.0.0-M
+OS_VERSION=V1.2.0.0-M
 
 # MQTT TCP port
 OS_MQTT_TCP_PORT=1883
@@ -68,6 +68,9 @@ LDAP_URL=
 
 # Whether to enable synchronous supos users  true or false
 SYNC_USER_ENABLE=false
+
+# Once enabled, the system will automatically sort folders into the 'state', 'action', and 'metrics' categories.
+ENABLE_AUTO_CATEGORIZATION=true
 
 # supOS EE Address  http://ip:port
 SUPOS_EE_ADDRESS=
