Fix typo in ENABLE_AUTO_CATEGORIZATION comment

--- a/.env
+++ b/.env
@@ -69,7 +69,7 @@ LDAP_URL=
 # Whether to enable synchronous supos users  true or false
 SYNC_USER_ENABLE=false
 
-# Once enabled, the system will automatically sort folders into the 'state', 'action', and 'metrics' categories.
+# Once enabled, the system will automatically sort folders into the 'state', 'action', and 'metric' categories.
 ENABLE_AUTO_CATEGORIZATION=true
 
 # supOS EE Address  http://ip:port
