feat: merge release 1.0.12

--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ VOLUMES_PATH=/volumes/supos/data
 ENTRANCE_PROTOCOL=http
 ENTRANCE_DOMAIN=127.0.0.1
 ENTRANCE_PORT=8088
+ENTRANCE_SSL_PORT=8443
 
 # LANGUAGE setting, supported: en-US, zh-CN
 LANGUAGE=en-US
@@ -69,7 +70,7 @@ LDAP_URL=
 # Whether to enable synchronous supos users  true or false
 SYNC_USER_ENABLE=false
 
-# Once enabled, the system will automatically sort folders into the 'state', 'action', and 'metrics' categories.
+# Once enabled, the system will automatically sort folders into the 'state', 'action', and 'metric' categories.
 ENABLE_AUTO_CATEGORIZATION=true
 
 # supOS EE Address  http://ip:port
