--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@ OS_PLATFORM_TYPE=linux
 
 # Example: 1. 4c8g (4 CPU cores, 8GB RAM), 2. 8c16g (8 CPU cores, 16GB RAM) or higher
 OS_RESOURCE_SPEC=1
-OS_NAME=supOS-CE
+OS_NAME=Tier0
 VOLUMES_PATH=/volumes/supos/data
 
-#(Your IP Address, do not use 127.0.0.1 or localhost, otherwise the login and authentication functions will not work)
+#(Your IP Address, do not to use 127.0.0.1 or localhost, otherwise the login and authentication functions will not work)
 ENTRANCE_PROTOCOL=http
 ENTRANCE_DOMAIN=127.0.0.1
 ENTRANCE_PORT=8088
@@ -18,7 +18,7 @@ ENTRANCE_SSL_PORT=8443
 LANGUAGE=en-US
 
 # Description of the supOS version
-OS_VERSION=V1.2.0.0-M
+OS_VERSION=V1.3.0.0-M
 
 # MQTT TCP port
 OS_MQTT_TCP_PORT=1883
